--- a/client/src/components/contacts/ContactMenu/ContactMenu.module.css
+++ b/client/src/components/contacts/ContactMenu/ContactMenu.module.css
@@ -74,11 +74,11 @@
 }
 
 .item:hover {
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: var(--menu-item-hover-bg);
 }
 
 .item:active {
-  background-color: rgba(255, 255, 255, 0.03);
+  background-color: var(--menu-item-active-bg);
 }
 
 .item:disabled {
