--- a/client/src/components/contacts/ContactModal/ContactModal.module.css
+++ b/client/src/components/contacts/ContactModal/ContactModal.module.css
@@ -31,14 +31,18 @@
   border-radius: var(--radius-control);
   border: none;
   border-color: transparent;
+  background-color: var(--button-primary-bg);
+  color: var(--button-primary-color);
 }
 
 .doneButton:hover:not(:disabled) {
+  background-color: var(--button-primary-hover-bg);
   border: none;
   border-color: transparent;
 }
 
 .doneButton:active:not(:disabled) {
+  background-color: var(--button-primary-active-bg);
   border: none;
   border-color: transparent;
 }
